Make background video orientation responsive

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <html lang="es-ar">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CAJÚ</title>
     <meta
       name="Description"
@@ -66,7 +65,8 @@
           </button>
         </div>
         <video id="backgroundVideo" autoplay="true" muted playsinline loop>
-          <source src="/assets/videos/background-vertical.mp4" type="video/mp4" />
+          <source src="/assets/videos/background-portrait.mp4" type="video/mp4" media="(orientation: portrait)" />
+          <source src="/assets/videos/background-landscape.mp4" type="video/mp4" media="(orientation: landscape)" />
         </video>
       </section>
 
