Improve font swap effect

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 
       @font-face {
         font-family: "Candara";
+        font-display: swap;
+        font-weight: 300;
         src: url("/assets/fonts/Candara_Light.woff2") format("woff2"),
           url("/assets/fonts/Candara_Light.ttf") format("truetype");
       }
@@ -102,6 +104,7 @@
 
           h4 {
             text-align: center;
+            font-weight: 300;
           }
 
           video {
