Adjust logo opacity

--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@
               background: none;
               border: none;
               cursor: pointer;
+              opacity: .48;
               &.animate {
                 animation: music 1.3s alternate 0s infinite;
+                opacity: 1;
               }
             }
           }
