Add Candara normal font-face

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
         src: url("/assets/fonts/Candara_Light.woff2") format("woff2"),
           url("/assets/fonts/Candara_Light.ttf") format("truetype");
       }
+      @font-face {
+        font-family: "Candara";
+        font-display: swap;
+        font-weight: normal;
+        src: url("/assets/fonts/Candara.woff2") format("woff2"), url("/assets/fonts/Candara.ttf") format("truetype");
+      }
+    </style>
     </style>
   </head>
   <body>
