Move index styles to its own style section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,27 @@
         src: url("/assets/fonts/Candara.woff2") format("woff2"), url("/assets/fonts/Candara.ttf") format("truetype");
       }
     </style>
+
+    <style>
+      /* Styles for this file */
+      section {
+        padding: 8%;
+        position: relative;
+        min-height: 100vh;
+        min-height: 100svh;
+      }
+
+      p {
+        font-weight: 300;
+        margin-block-end: 0;
+      }
+
+      h1,
+      h2,
+      h3,
+      h4 {
+        text-align: center;
+      }
     </style>
   </head>
   <body>
