Adjust subtitle font breakpoints and max-width

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
             <img class="title" src="/assets/images/title-xs.png" height="100px" />
           </picture>
           <h4>
-            We are cinematic duo comprising of cinematographer<br />
-            Camila Hayes and musician Julia Groppo<br />
+            We are cinematic duo comprising of cinematographer Camila Hayes and musician Julia Groppo<br />
             We provide Content solutions for Hotels & Resorts
           </h4>
           <button onclick="backgroundVideo.muted = !backgroundVideo.muted; this.classList.toggle('animate');">
@@ -126,6 +125,7 @@
 
             h4 {
               font-weight: 300;
+              max-width: 42ch;
             }
 
             video {
