--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     "
     />
     <style>
-      /* reset */
+      /* Reset */
       * {
         box-sizing: border-box;
       }
@@ -23,7 +23,6 @@
         margin: 0;
         height: 100%;
         min-height: 100%;
-
         font-size: 100%;
       }
 
@@ -56,11 +55,22 @@
 
     <style>
       /* Styles for this file */
+
       section {
         padding: 8%;
         position: relative;
         min-height: 100vh;
-        min-height: 100svh;
+        min-height: 100lvh;
+
+        > p,
+        h1,
+        h2,
+        h3,
+        h4 {
+          /* Written content  */
+          max-width: 70ch;
+          margin-inline: auto;
+        }
       }
 
       p {
@@ -73,6 +83,16 @@
       h3,
       h4 {
         text-align: center;
+      }
+
+      .background-full {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        object-fit: cover;
+        pointer-events: none;
       }
     </style>
   </head>
@@ -88,19 +108,20 @@
             We are cinematic duo comprising of cinematographer Camila Hayes and musician Julia Groppo<br />
             We provide Content solutions for Hotels & Resorts
           </h4>
-          <button onclick="backgroundVideo.muted = !backgroundVideo.muted; this.classList.toggle('animate');">
+          <button autofocus onclick="bgVideo.muted = !bgVideo.muted; this.classList.toggle('music-on');">
             <picture>
               <source srcset="/assets/images/logo-xs.avif 1x, /assets/images/logo-xs-2x.avif 2x" type="image/avif" />
               <img srcset="/assets/images/logo-xs.png 1x, /assets/images/logo-xs-2x.png 2x" height="100px" />
             </picture>
           </button>
         </div>
-        <video id="backgroundVideo" autoplay="true" muted playsinline loop>
+        <video id="bgVideo" class="background-full" autoplay="true" muted playsinline loop alt="background video">
           <source src="/assets/videos/background-portrait.mp4" type="video/mp4" media="(orientation: portrait)" />
           <source src="/assets/videos/background-landscape.mp4" type="video/mp4" media="(orientation: landscape)" />
         </video>
         <style>
           section:first-child {
+            height: 100svh;
             padding-top: 20vh;
 
             & > div {
@@ -112,9 +133,15 @@
                 border: none;
                 cursor: pointer;
                 opacity: 0.48;
-                &.animate {
-                  animation: music 1.3s alternate 0s infinite;
-                  opacity: 1;
+                animation: music 1.3s alternate 0s infinite;
+
+                &.music-on {
+                  opacity: 1 !important;
+                }
+
+                &:focus-visible {
+                  outline: none;
+                  opacity: 0.6;
                 }
               }
             }
@@ -127,16 +154,8 @@
               font-weight: 300;
               max-width: 42ch;
             }
-
-            video {
-              position: absolute;
-              inset: 0;
-              width: 100%;
-              height: 100%;
-              z-index: -1;
-              object-fit: cover;
-            }
           }
+
           @keyframes music {
             from {
               transform: scale(1);
@@ -149,11 +168,7 @@
       </section>
 
       <section id="services">
-        <picture>
-          <source srcset="/assets/images/background-cajus-portrait.avif" type="image/avif" />
-          <img srcset="/assets/images/background-cajus-portrait.jpg" />
-        </picture>
-        <h2>Services</h2>
+        <h2>SERVICES</h2>
         <p>
           We offer a comprehensive and integrated solution of audiovisual material for media and social networks. We
           have the resources, skills, and industry-specific experience to develop creative projects that are functional
@@ -170,23 +185,116 @@
           engaging with current trends.
         </p>
 
+        <picture>
+          <source srcset="/assets/images/background-cajus-portrait.avif" type="image/avif" />
+          <img class="background-full" srcset="/assets/images/background-cajus-portrait.jpg" alt="background image" />
+        </picture>
+
         <style>
           #services {
             display: grid;
             place-content: center;
 
             img {
-              position: absolute;
-              inset: 0;
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-              object-position: top;
               opacity: 18%;
             }
 
             h2 {
               font-weight: normal;
+            }
+          }
+        </style>
+      </section>
+
+      <section id="about">
+        <h2>ABOUT</h2>
+        <p>
+          In Cajú, two best friends, one filmmaker and the other musician, come together to reveal the essence of each
+          space. With versatility, and a creatively vision, cultivated together throughout our lives, we approach every
+          challenge with passion.<br />
+          Like the grain that gives rise to the fruit, we identify the strengths of each establishment, and from that
+          essential seed, the idea germinates. In a dedicated process, our creativity finds its most authentic
+          expression, resulting in visually appealing pieces for those seeking a unique and memorable experience.<br />
+          In Cajú, we not only create images, we weave stories that captivate the senses and nourish the soul. Each
+          project is a masterpiece of our friendship and creativity, an expression of the beauty we find in every hotel
+          experience.
+        </p>
+        <picture>
+          <source srcset="/assets/images/about.avif" type="image/avif" />
+          <img src="/assets/images/about.png" height="284px" alt="Camila Hayes and Julia Groppo" />
+        </picture>
+        <p>
+          At the age of 13, <strong>Camila Hayes</strong> inherited her mother's photo camera, marking the beginning of
+          her profound love for photography and a constant pursuit of expressing herself through visual language, which
+          led to her fascination with cinema. Years later, she graduated from the National University of Córdoba with a
+          bachelor's degree in film and television and further specialized with a Master's in Cinematography from the
+          Escola Superior de Cinema i Audiovisuals de Catalunya. <br />
+          Mountaineering and rock climbing took her on adventures to remote places, where she discovered a profound
+          curiosity for rural inhabitants and how their lives intertwine with the landscape. From this intrinsic
+          relationship between humans and nature arise her aesthetic inclinations and her way of conceiving existence.
+          Just as different weather atmospheres shape our moods, she seeks to create cinematic atmospheres that
+          emotionally resonate with the viewer, as she considers art to be primarily an affective experience.
+        </p>
+        <p>
+          <strong>Julia Groppo</strong> grew up immersed in the world of music from an early age. Singer, guitarist, and
+          drummer, she has explored a wide range of genres that have shaped her unique personal style. Her great passion
+          for storytelling and boundless sonic expression, found in film music the perfect canvas to experiment with
+          sound. She graduated from the Universidad Católica Argentina with a degree in Composition and Production of
+          Cinematic Music, where she expanded her knowledge in piano, classical music, production, and sound design. Her
+          diverse trajectory is now reflected in a remarkable versatility to tackle artistic projects. She skillfully
+          blends the organic and the digital, silence and sound, abundance and simplicity, giving life to soundscapes
+          that awaken consciousness.
+        </p>
+
+        <div class="background-images">
+          <picture>
+            <source srcset="/assets/images/caju-xs.avif 1x, /assets/images/caju-xs.avif 2x" type="image/avif" />
+            <img src="/assets/images/caju-xs.png" class="left" />
+          </picture>
+          <picture>
+            <source srcset="/assets/images/caju-xs.avif 1x, /assets/images/caju-xs.avif 2x" type="image/avif" />
+            <img src="/assets/images/caju-xs.png" class="right" />
+          </picture>
+        </div>
+
+        <style>
+          #about {
+            display: grid;
+            place-content: center;
+            overflow: hidden;
+
+            background-image: url("/assets/images/bg-texture.png");
+            background-repeat: repeat;
+
+            > picture:first-of-type {
+              display: contents;
+
+              img {
+                margin-block-start: 3em;
+                max-width: min(80%, 300px);
+                margin-inline: auto;
+                object-fit: contain;
+              }
+            }
+
+            .background-images {
+              img {
+                position: absolute;
+                width: 46vw;
+                opacity: 0.48;
+                pointer-events: none;
+
+                &.left {
+                  top: -8vw;
+                  left: -11vw;
+                  transform: rotate(28deg);
+                }
+                &.right {
+                  right: -11vw;
+                  bottom: -13vw;
+                  transform: rotate(210deg);
+                }
+              }
             }
           }
         </style>
