Replace mini cajus background and use bg-texture as background

--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
         </p>
 
         <picture>
-          <source srcset="/assets/images/background-cajus-portrait.avif" type="image/avif" />
-          <img class="background-full" srcset="/assets/images/background-cajus-portrait.jpg" alt="background image" />
+          <source srcset="/assets/images/background-cajus-landscape.avif" type="image/avif" />
+          <img class="background-full" srcset="/assets/images/background-cajus-landscape.png" alt="background image" />
         </picture>
 
         <style>
