Align subtitles style

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       </section>
 
       <section id="services" class="bg-texture">
-        <h2>SERVICES</h2>
+        <h3>SERVICES</h3>
         <p>
           We offer a comprehensive and integrated solution of audiovisual material for media and social networks. We
           have the resources, skills, and industry-specific experience to develop creative projects that are functional
@@ -207,7 +207,7 @@
               z-index: initial;
             }
 
-            h2 {
+            h3 {
               font-weight: normal;
             }
           }
@@ -215,7 +215,7 @@
       </section>
 
       <section id="about" class="bg-texture">
-        <h2>ABOUT</h2>
+        <h3>ABOUT</h3>
         <p>
           In Cajú, two best friends, one filmmaker and the other musician, come together to reveal the essence of each
           space. With versatility, and a creatively vision, cultivated together throughout our lives, we approach every
@@ -270,6 +270,10 @@
             display: grid;
             place-content: center;
             overflow: hidden;
+
+            h3 {
+              font-weight: normal;
+            }
 
             > picture:first-of-type {
               display: contents;
