--- a/index.html
+++ b/index.html
@@ -95,10 +95,14 @@
         pointer-events: none;
       }
 
-      .bg-texture {
+      .bg-texture::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        z-index: -1;
         background-image: image-set(
-          url("/assets/images/bg-texture.png") type("image/png"),
-          url("/assets/images/bg-texture.avif") type("image/avif")
+          url("/assets/images/bg-texture.avif") type("image/avif"),
+          url("/assets/images/bg-texture.png") type("image/png")
         );
         background-repeat: repeat;
       }
@@ -106,7 +110,7 @@
   </head>
   <body>
     <main>
-      <section>
+      <section id="hero" class="bg-texture">
         <div>
           <picture>
             <source srcset="/assets/images/title-xs.avif 1x" type="image/avif" />
@@ -198,7 +202,7 @@
             display: grid;
             place-content: center;
 
-            &::before {
+            &::after {
               content: "";
               position: absolute;
               inset: 0;
@@ -206,7 +210,7 @@
                 url("/assets/images/background-cajus-landscape.avif") type("image/avif"),
                 url("/assets/images/background-cajus-landscape.png") type("image/png")
               );
-              background-position: center;
+              background-position: top;
             }
 
             > * {
