Improve load times
* Lazy load images below the first section
* Add missing Candara.woff2 font file

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       @font-face {
         font-family: "Candara";
         font-display: swap;
-        font-weight: normal;
+        font-weight: 400;
         src: url("/assets/fonts/Candara.woff2") format("woff2"), url("/assets/fonts/Candara.ttf") format("truetype");
       }
     </style>
@@ -220,6 +220,7 @@
             width="1357px"
             heigth="1920px"
             media="(orientation: portrait)"
+            loading="lazy"
           />
         </picture>
 
@@ -255,7 +256,7 @@
         </p>
         <picture>
           <source srcset="/assets/images/about.avif" type="image/avif" />
-          <img src="/assets/images/about.png" height="284px" alt="Camila Hayes and Julia Groppo" />
+          <img src="/assets/images/about.png" height="284px" loading="lazy" alt="Camila Hayes and Julia Groppo" />
         </picture>
         <p>
           At the age of 13, <strong>Camila Hayes</strong> inherited her mother's photo camera, marking the beginning of
@@ -283,19 +284,19 @@
         <div class="background-images">
           <picture>
             <source srcset="/assets/images/caju-xs.avif 1x, /assets/images/caju-lg.avif 2x" type="image/avif" />
-            <img src="/assets/images/caju-xs.png" class="one" />
+            <img src="/assets/images/caju-xs.png" class="one" loading="lazy" />
           </picture>
           <picture>
             <source srcset="/assets/images/caju-xs.avif 1x, /assets/images/caju-lg.avif 2x" type="image/avif" />
-            <img src="/assets/images/caju-xs.png" class="two" />
+            <img src="/assets/images/caju-xs.png" class="two" loading="lazy" />
           </picture>
           <picture>
             <source srcset="/assets/images/caju-xs.avif 1x, /assets/images/caju-lg.avif 2x" type="image/avif" />
-            <img src="/assets/images/caju-xs.png" class="three" />
+            <img src="/assets/images/caju-xs.png" class="three" loading="lazy" />
           </picture>
           <picture>
             <source srcset="/assets/images/caju-xs.avif 1x, /assets/images/caju-lg.avif 2x" type="image/avif" />
-            <img src="/assets/images/caju-xs.png" class="four" />
+            <img src="/assets/images/caju-xs.png" class="four" loading="lazy" />
           </picture>
         </div>
 
