--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
           Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
       }
 
+      a {
+        color: inherit;
+        font-weight: 300;
+      }
+
+      h3 {
+        font-weight: normal;
+      }
+
       @font-face {
         font-family: "Candara";
         font-display: swap;
@@ -233,10 +242,6 @@
               object-position: top;
               opacity: 0.18;
             }
-
-            h3 {
-              font-weight: normal;
-            }
           }
         </style>
       </section>
@@ -305,10 +310,6 @@
             display: grid;
             place-content: center;
             overflow: hidden;
-
-            h3 {
-              font-weight: normal;
-            }
 
             > picture:first-of-type {
               /* Image at center of section */
