--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         height: 100%;
         min-height: 100%;
         font-size: 100%;
+        line-height: 1.25;
       }
 
       /* Global styles */
