Adjust some spaces

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       /* Styles for this file */
 
       section {
-        padding: 8%;
+        padding: calc(8% + 3rem) 8%;
         position: relative;
         min-height: 100vh;
         min-height: 100lvh;
@@ -317,7 +317,7 @@
               display: contents;
 
               img {
-                margin-block-start: 3em;
+                margin-block-start: 1em;
                 max-width: min(80%, 300px);
                 margin-inline: auto;
                 object-fit: contain;
