Add max-width to cajus in about

--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
                 width: 50vw;
                 opacity: 0.4;
                 pointer-events: none;
+                max-width: 420px;
 
                 &.one {
                   top: 0;
