Redice about->location text size

--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
               margin-top: 2rem;
               p {
                 margin: 0;
+                font-size: 0.8em;
               }
             }
 
