--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     We provide Content solutions for Hotels & Resorts.
     "
     />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png" />
     <style>
       /* Reset */
       * {
