Add navigation menu  (basic structure)
* Commissioned and language not implemented yet.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png" />
+    <script src="/components/aside-menu.js" type="module"></script>
     <style>
       /* Reset */
       * {
@@ -115,6 +116,7 @@
     </style>
   </head>
   <body>
+    <aside-menu> </aside-menu>
     <main>
       <section>
         <div>
@@ -447,6 +449,7 @@
               border: none;
               animation: music 1.3s alternate 0s infinite;
               margin-top: 1em;
+              cursor: pointer;
             }
           }
         </style>
