Remove px from inline height/width attributres

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <img
               class="title"
               srcset="/assets/images/caju-title-xs.png 1x, /assets/images/caju-title.png 2x"
-              height="50px"
+              height="50"
             />
           </picture>
           <h4>
@@ -138,7 +138,7 @@
           <button autofocus onclick="bgVideo.muted = !bgVideo.muted; this.classList.toggle('music-on');">
             <picture>
               <source srcset="/assets/images/logo-xs.avif 1x, /assets/images/logo-xs-2x.avif 2x" type="image/avif" />
-              <img srcset="/assets/images/logo-xs.png 1x, /assets/images/logo-xs-2x.png 2x" height="100px" />
+              <img srcset="/assets/images/logo-xs.png 1x, /assets/images/logo-xs-2x.png 2x" height="100" />
             </picture>
           </button>
         </div>
@@ -217,29 +217,29 @@
             srcset="/assets/images/background-cajus-landscape.avif"
             type="image/avif"
             media="(orientation: landscape)"
-            width="1920px"
-            heigth="1357px"
+            width="1920"
+            heigth="1357"
           />
           <source
             srcset="/assets/images/background-cajus-landscape.png"
             type="image/png"
             media="(orientation: landscape)"
-            width="1920px"
-            heigth="1357px"
+            width="1920"
+            heigth="1357"
           />
           <source
             srcset="/assets/images/background-cajus-portrait.avif"
             type="image/avif"
             media="(orientation: portrait)"
-            width="1357px"
-            heigth="1920px"
+            width="1357"
+            heigth="1920"
           />
           <img
             class="background-full"
             src="/assets/images/background-cajus-portrait.png"
             type="image/png"
-            width="1357px"
-            heigth="1920px"
+            width="1357"
+            heigth="1920"
             media="(orientation: portrait)"
             loading="lazy"
           />
@@ -273,7 +273,7 @@
         </p>
         <picture>
           <source srcset="/assets/images/about.avif" type="image/avif" />
-          <img src="/assets/images/about.png" height="284px" loading="lazy" alt="Camila Hayes and Julia Groppo" />
+          <img src="/assets/images/about.png" height="284" loading="lazy" alt="Camila Hayes and Julia Groppo" />
         </picture>
         <p>
           At the age of 13, <strong>Camila Hayes</strong> inherited her mother's photo camera, marking the beginning of
@@ -379,7 +379,7 @@
           <a href="tel:+34687017471">+34687017471</a>
           <a href="tel:+34657759110">+34657759110</a>
           <div class="location">
-            <img src="/assets/images/pin.png" height="35px" />
+            <img src="/assets/images/pin.png" height="35" />
 
             <p>From Argentina <br />Based in <strong>Barcelona</strong></p>
           </div>
@@ -397,7 +397,7 @@
           <button onclick='window.scrollTo({top: 0, behavior: "smooth"})'>
             <picture>
               <source srcset="/assets/images/logo-xs.avif 1x, /assets/images/logo-xs-2x.avif 2x" type="image/avif" />
-              <img srcset="/assets/images/logo-xs.png 1x, /assets/images/logo-xs-2x.png 2x" height="50px" />
+              <img srcset="/assets/images/logo-xs.png 1x, /assets/images/logo-xs-2x.png 2x" height="50" />
             </picture>
           </button>
         </div>
