--- a/comissioned/index.html
+++ b/comissioned/index.html
@@ -120,85 +120,85 @@
           <button data-video-id="3wNDdOhAHrM">
             <picture>
               <source srcset="1.avif" type="image/avif" />
-              <img src="1.jpg" width="1280px" loading="lazy" />
+              <img src="1.jpg" width="1280" loading="lazy" />
             </picture>
           </button>
           <button data-video-id="QOvJbafxpYY">
             <picture>
               <source srcset="2.avif" type="image/avif" />
-              <img src="2.jpg" width="1280px" loading="lazy" />
+              <img src="2.jpg" width="1280" loading="lazy" />
             </picture>
           </button>
           <button data-video-id="50yAWEOPBNQ">
             <picture>
               <source srcset="3.avif" type="image/avif" />
-              <img src="3.jpg" width="1280px" loading="lazy" alt="Serenidad" />
+              <img src="3.jpg" width="1280" loading="lazy" alt="Serenidad" />
             </picture>
           </button>
           <button data-video-id="OlqNYTXEm2U">
             <picture>
               <source srcset="4.avif" type="image/avif" />
-              <img src="4.jpg" width="1280px" loading="lazy" />
+              <img src="4.jpg" width="1280" loading="lazy" />
             </picture>
           </button>
           <button data-video-id="3wNDdOhAHrM">
             <picture>
               <source srcset="5.avif" type="image/avif" />
-              <img src="5.jpg" width="1280px" loading="lazy" />
+              <img src="5.jpg" width="1280" loading="lazy" />
             </picture>
           </button>
           <button data-video-id="3wNDdOhAHrM">
             <picture>
               <source srcset="6.avif" type="image/avif" />
-              <img src="6.jpg" width="1280px" loading="lazy" />
+              <img src="6.jpg" width="1280" loading="lazy" />
             </picture>
           </button>
           <button data-video-id="3wNDdOhAHrM">
             <picture>
               <source srcset="7.avif" type="image/avif" />
-              <img src="7.jpg" width="1280px" loading="lazy" />
+              <img src="7.jpg" width="1280" loading="lazy" />
             </picture>
           </button>
           <button data-video-id="3wNDdOhAHrM">
             <picture>
               <source srcset="8.avif" type="image/avif" />
-              <img src="8.jpg" width="1280px" loading="lazy" />
+              <img src="8.jpg" width="1280" loading="lazy" />
             </picture>
           </button>
           <button data-video-id="3wNDdOhAHrM">
             <picture>
               <source srcset="9.avif" type="image/avif" />
-              <img src="9.jpg" width="1280px" loading="lazy" />
+              <img src="9.jpg" width="1280" loading="lazy" />
             </picture>
           </button>
           <button data-video-id="3wNDdOhAHrM">
             <picture>
               <source srcset="10.avif" type="image/avif" />
-              <img src="10.jpg" width="1280px" loading="lazy" />
+              <img src="10.jpg" width="1280" loading="lazy" />
             </picture>
           </button>
           <button data-video-id="3wNDdOhAHrM">
             <picture>
               <source srcset="11.avif" type="image/avif" />
-              <img src="11.jpg" width="1280px" loading="lazy" />
+              <img src="11.jpg" width="1280" loading="lazy" />
             </picture>
           </button>
           <button data-video-id="3wNDdOhAHrM">
             <picture>
               <source srcset="12.avif" type="image/avif" />
-              <img src="12.jpg" width="1280px" loading="lazy" />
+              <img src="12.jpg" width="1280" loading="lazy" />
             </picture>
           </button>
           <button data-video-id="3wNDdOhAHrM">
             <picture>
               <source srcset="13.avif" type="image/avif" />
-              <img src="13.jpg" width="1280px" loading="lazy" />
+              <img src="13.jpg" width="1280" loading="lazy" />
             </picture>
           </button>
           <button data-video-id="3wNDdOhAHrM">
             <picture>
               <source srcset="14.avif" type="image/avif" />
-              <img src="14.jpg" width="1280px" loading="lazy" />
+              <img src="14.jpg" width="1280" loading="lazy" />
             </picture>
           </button>
         </div>
